--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         <img width="100" src="logo.jpg" alt="logo"></h1>
       <p style="text-align: right; color: white;"><a href="index.html">Home</a></p>
       <br>
-      <p style="text-align: right; color: white;"><a href="library.html">Library</a></p>
+      <p style="text-align: right; color: white;"><a href="library.html">Shop now</a></p>
       <hr>
       <section>
         <div class="footer">
-          <p>Contact me on instagram @Thapakickz</p>
+          <h1 style="margin: 10px;">Contact me on Instagram @Thapa.kickz</h1>
+          <h1>Contact the creator of the site on Instagram @Matthew.gwood</h1>
         </div>
       </section>
     </body>
@@ -60,6 +61,7 @@
           <label for="r4" class="bar"></label>
           <label for="r5" class="bar"></label>
       </div>
+      
     </div>
   </body>
 </html>
