--- a/library.html
+++ b/library.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header>
-    <h1>Shoe Library</h1>
-    <a href="index.html">Home</a>
-    <p>Some shoes may already be sold and unavailable for purchase.</p>
+<header style="color: white;">
+    <h1 style="color: white; font-size: 300%; font-family: 'Montserrat', sans-serif;"><u>THAPA KICKZ</u>
+    <div class="toplogo">
+        <img width="100" src="logo.jpg" alt="logo"></h1>
+    <p style="text-align: right; color: white;"><a href="index.html">Home</a></p>
+    <br>
+    <p style="text-align: right; color: white;"><a href="library.html">Shop now</a></p>
+    <hr>
 </header>
+<main>
+    <h3 style="color: white;"><center>All shoes displayed are available for sale</center></h3>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <figure>
+        <a href="SHOE_TEMPLATE.html">
+            <img style="margin: 20px;" width="400" src="3.jpg">
+        </a>
+        <figcaption style="left: 100px;">jordans</figcaption>
+    </figure>
+
+</main>
 
 
 
